LPS-99150 Fix search icon styles

--- a/modules/apps/contacts/contacts-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/contacts/contacts-web/src/main/resources/META-INF/resources/css/main.scss
@@ -286,11 +286,15 @@ $section-header-bg: #cce6f7;
 			top: 0;
 			width: 250px;
 
-			.contacts-search .icon-search {
-				color: $border-color;
-				position: absolute;
-				right: 11px;
-				top: 11px;
+			.contacts-search {
+				position: relative;
+
+				.lexicon-icon-search {
+					color: $border-color;
+					position: absolute;
+					right: 0.85rem;
+					top: 0.85rem;
+				}
 			}
 		}
 
