LPS-99353 Update FragmentComment resolved styles

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentComment.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentComment.scss
@@ -49,6 +49,10 @@
 		border-top: solid thin #e7e7ed;
 	}
 
+	&--resolved {
+		background-color: #edf9f0;
+	}
+
 	&--with-delete-mask {
 		min-height: 10rem;
 	}
