--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
@@ -60,6 +60,10 @@
 	}
 }
 
+.dialog-iframe-popup {
+	background-color: #fff;
+}
+
 .item-selector {
 	.input-file {
 		$focus-box-shadow: 0 0 0 2px #fff, 0 0 0 4px #80acff !default;
