LPS-99057 Add border bottom to management-toolbar

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
@@ -64,6 +64,10 @@
 	background-color: #fff;
 }
 
+.portlet-item-selector .management-bar {
+	border-bottom-color: #e7e7ed;
+}
+
 .item-selector {
 	.input-file {
 		$focus-box-shadow: 0 0 0 2px #fff, 0 0 0 4px #80acff !default;
