LPS-99262 Specific css for product menu links

--- a/modules/apps/web-experience/product-navigation/product-navigation-product-menu-theme-contributor/src/main/resources/META-INF/resources/product_navigation_product_menu.scss
+++ b/modules/apps/web-experience/product-navigation/product-navigation-product-menu-theme-contributor/src/main/resources/META-INF/resources/product_navigation_product_menu.scss
@@ -99,8 +99,12 @@ body {
 }
 
 .product-menu {
-	.nav a {
+	.nav li a {
 		color: $product-menu-nav-link-color;
+
+		&:hover {
+			color: $product-menu-nav-link-color;
+		}
 	}
 
 	.nav-equal-height {
