LPS-95495 - Remove mixin hyphenation

--- a/modules/apps/microblogs/microblogs-web/src/main/resources/META-INF/resources/microblogs/css/main.scss
+++ b/modules/apps/microblogs/microblogs-web/src/main/resources/META-INF/resources/microblogs/css/main.scss
@@ -134,7 +134,8 @@ $microblogs-border-color: #eaeaea;
 			margin-left: 60px;
 
 			.content {
-				@include hyphenation;
+				@include hyphens;
+				@include word-wrap;
 			}
 		}
 
