LPS-99412 Convert heading from rich-text to text

--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/com/liferay/fragment/collection/contributor/basic/component/dependencies/heading/index.html
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/com/liferay/fragment/collection/contributor/basic/component/dependencies/heading/index.html
@@ -1,6 +1,6 @@
 <div class="component-heading pb-2">
 	<p class="text-${configuration.textColor.cssClass} ${configuration.headingLevel} text-${configuration.textAlign}">
-		<lfr-editable id="element-text" type="rich-text">
+		<lfr-editable id="element-text" type="text">
 			Heading Example
 		</lfr-editable>
 	</p>
