LPS-95493 - Remove old mixin

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
@@ -8,8 +8,7 @@
 		position: absolute;
 		right: 0;
 		top: 0;
-
-		@include prefixer(overflow-scrolling, touch, 'webkit');
+		-webkit-overflow-scrolling: touch;
 	}
 }
 
