LPS-95492 - Remove mixin experimental

--- a/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_search_iterator.scss
+++ b/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_search_iterator.scss
@@ -27,7 +27,7 @@
 }
 
 .touch .lfr-search-container {
-	@include experimental(overflow-scrolling, touch);
+	-webkit-overflow-scrolling: touch;
 
 	.searchcontainer-content .table {
 		max-width: none;
