LPS-99526 - Use correct heading tags instead of <span />; Source format code using prettier

--- a/modules/apps/frontend-theme-porygon/frontend-theme-porygon-site-initializer/src/main/resources/com/liferay/frontend/theme/porygon/site/initializer/internal/dependencies/fragments/entry.html
+++ b/modules/apps/frontend-theme-porygon/frontend-theme-porygon-site-initializer/src/main/resources/com/liferay/frontend/theme/porygon/site/initializer/internal/dependencies/fragments/entry.html
@@ -9,13 +9,17 @@
 <div class="container-fluid container-fluid-max-xl container-form-lg">
 	<div class="row">
 		<div class="col-md-10 col-lg-8 mx-auto">
-			<div aria-level="1" class="text-center" role="heading">
-				<lfr-editable id="porygon_detail_content_title" type="text">Title</lfr-editable>
-			</div>
-
-			<h2 class="text-center">
-				<lfr-editable id="porygon_detail_content_subtitle" type="text">Sub title</lfr-editable>
+			<h2 aria-level="1" class="text-center" role="heading">
+				<lfr-editable id="porygon_detail_content_title" type="text"
+					>Title</lfr-editable
+				>
 			</h2>
+
+			<h3 class="text-center">
+				<lfr-editable id="porygon_detail_content_subtitle" type="text"
+					>Sub title</lfr-editable
+				>
+			</h3>
 
 			<div class="mt-3">
 				<lfr-editable id="porygon_detail_content" type="rich-text">
