--- a/modules/apps/frontend-theme-fjord/frontend-theme-fjord-site-initializer/src/main/resources/com/liferay/frontend/theme/fjord/site/initializer/internal/dependencies/fragments/home/actions.html
+++ b/modules/apps/frontend-theme-fjord/frontend-theme-fjord-site-initializer/src/main/resources/com/liferay/frontend/theme/fjord/site/initializer/internal/dependencies/fragments/home/actions.html
@@ -1,30 +1,53 @@
 <div class="fjord-actions fjord-section">
-	<section class="bg-dark bg-image bg-image-left fjord-actions-image jumbotron jumbotron-fluid mb-0 text-white" data-lfr-background-image-id="fjord-actions">
+	<section
+		class="bg-dark bg-image bg-image-left fjord-actions-image jumbotron jumbotron-fluid mb-0 text-white"
+		data-lfr-background-image-id="fjord-actions"
+	>
 		<div class="container py-5">
 			<div class="row">
 				<div class="col-12 col-lg-8 col-md-10 col-xl-6">
 					<lfr-editable id="fjord-actions-title" type="rich-text">
-						<span class="display-4" role="heading" aria-level="1">Dynamic and Customizable for a Healthier You</span>
+						<h2 class="display-4" role="heading" aria-level="1">
+							Dynamic and Customizable for a Healthier You
+						</h2>
 					</lfr-editable>
 
 					<div class="lead">
 						<lfr-editable id="fjord-actions-text" type="rich-text">
-							<p>Take advantage of a clean layout and page templates to help you launch your new app and <b>make this page your own.</b></p>
+							<p>
+								Take advantage of a clean layout and page
+								templates to help you launch your new app and
+								<b>make this page your own.</b>
+							</p>
 						</lfr-editable>
 					</div>
 
 					<div class="d-inline-block">
-						<lfr-editable id="fjord-actions-button1" type="rich-text">
+						<lfr-editable
+							id="fjord-actions-button1"
+							type="rich-text"
+						>
 							<div class="d-inline-flex">
-								<a class="btn btn-light px-4 px-sm-5 py-2 py-sm-3 text-uppercase" href="#">Discover</a>
+								<a
+									class="btn btn-light px-4 px-sm-5 py-2 py-sm-3 text-uppercase"
+									href="#"
+									>Discover</a
+								>
 							</div>
 						</lfr-editable>
 					</div>
 
 					<div class="d-inline-block ml-3">
-						<lfr-editable id="fjord-actions-button2" type="rich-text">
+						<lfr-editable
+							id="fjord-actions-button2"
+							type="rich-text"
+						>
 							<div class="d-inline-flex">
-								<a class="btn btn-outline-light px-4 px-sm-5 py-2 py-sm-3 text-uppercase" href="#">Download</a>
+								<a
+									class="btn btn-outline-light px-4 px-sm-5 py-2 py-sm-3 text-uppercase"
+									href="#"
+									>Download</a
+								>
 							</div>
 						</lfr-editable>
 					</div>
