--- a/modules/apps/frontend-theme-westeros-bank/frontend-theme-westeros-bank-site-initializer/src/main/resources/com/liferay/frontend/theme/westeros/bank/site/initializer/internal/dependencies/fragments/links.html
+++ b/modules/apps/frontend-theme-westeros-bank/frontend-theme-westeros-bank-site-initializer/src/main/resources/com/liferay/frontend/theme/westeros/bank/site/initializer/internal/dependencies/fragments/links.html
@@ -4,7 +4,9 @@
 			<div class="row">
 				<div class="col-12">
 					<lfr-editable id="westeros-links-title" type="rich-text">
-						<span class="h6 mb-0" role="heading" aria-level="1">FIND US</span>
+						<h2 class="h6 mb-0" role="heading" aria-level="1">
+							FIND US
+						</h2>
 					</lfr-editable>
 				</div>
 			</div>
@@ -13,15 +15,27 @@
 				<div class="align-items-center col-12 col-md-6 d-flex mt-5">
 					<lfr-editable id="westeros-links-icon-1" type="image">
 						<a class="d-block" href="#" title="westeros">
-							<img alt="" src="[resources:westeros_links_icon_1.png]" />
+							<img
+								alt=""
+								src="[resources:westeros_links_icon_1.png]"
+							/>
 						</a>
 					</lfr-editable>
 
 					<div class="ml-3">
-						<lfr-editable id="westeros-links-text-1" type="rich-text">
-							<a class="d-inline-block text-decoration-none text-reset" href="#" title="westeros">
+						<lfr-editable
+							id="westeros-links-text-1"
+							type="rich-text"
+						>
+							<a
+								class="d-inline-block text-decoration-none text-reset"
+								href="#"
+								title="westeros"
+							>
 								<p class="h3 mb-0">(0054) 432 943 435</p>
-								<p class="mb-0">+435 432 654 654 from Overseas</p>
+								<p class="mb-0">
+									+435 432 654 654 from Overseas
+								</p>
 							</a>
 						</lfr-editable>
 					</div>
@@ -30,13 +44,23 @@
 				<div class="align-items-center col-12 col-md-6 d-flex mt-5">
 					<lfr-editable id="westeros-links-icon-2" type="image">
 						<a class="d-block" href="#" title="westeros">
-							<img alt="" src="[resources:westeros_links_icon_2.png]" />
+							<img
+								alt=""
+								src="[resources:westeros_links_icon_2.png]"
+							/>
 						</a>
 					</lfr-editable>
 
 					<div class="ml-3">
-						<lfr-editable id="westeros-links-text-2" type="rich-text">
-							<a class="d-inline-block text-decoration-none text-reset" href="#" title="westeros">
+						<lfr-editable
+							id="westeros-links-text-2"
+							type="rich-text"
+						>
+							<a
+								class="d-inline-block text-decoration-none text-reset"
+								href="#"
+								title="westeros"
+							>
 								<p class="h3 mb-0">Press Room</p>
 							</a>
 						</lfr-editable>
@@ -46,13 +70,23 @@
 				<div class="align-items-center col-12 col-md-6 d-flex mt-5">
 					<lfr-editable id="westeros-links-icon-3" type="image">
 						<a class="d-block" href="#" title="westeros">
-							<img alt="" src="[resources:westeros_links_icon_3.png]" />
+							<img
+								alt=""
+								src="[resources:westeros_links_icon_3.png]"
+							/>
 						</a>
 					</lfr-editable>
 
 					<div class="ml-3">
-						<lfr-editable id="westeros-links-text-3" type="rich-text">
-							<a class="d-inline-block text-decoration-none text-reset" href="#" title="westeros">
+						<lfr-editable
+							id="westeros-links-text-3"
+							type="rich-text"
+						>
+							<a
+								class="d-inline-block text-decoration-none text-reset"
+								href="#"
+								title="westeros"
+							>
 								<p class="h3 mb-0">Westeros Branches</p>
 							</a>
 						</lfr-editable>
@@ -62,13 +96,23 @@
 				<div class="align-items-center col-12 col-md-6 d-flex mt-5">
 					<lfr-editable id="westeros-links-icon-4" type="image">
 						<a class="d-block" href="#" title="westeros">
-							<img alt="" src="[resources:westeros_links_icon_4.png]" />
+							<img
+								alt=""
+								src="[resources:westeros_links_icon_4.png]"
+							/>
 						</a>
 					</lfr-editable>
 
 					<div class="ml-3">
-						<lfr-editable id="westeros-links-text-4" type="rich-text">
-							<a class="d-inline-block text-decoration-none text-reset" href="#" title="westeros">
+						<lfr-editable
+							id="westeros-links-text-4"
+							type="rich-text"
+						>
+							<a
+								class="d-inline-block text-decoration-none text-reset"
+								href="#"
+								title="westeros"
+							>
 								<p class="h3 mb-0">Work with us</p>
 							</a>
 						</lfr-editable>
