LPS-99057 Update look and fell with minor css changes and intensive use of clay-css classes

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
@@ -69,6 +69,10 @@
 }
 
 .item-selector {
+	.card-row {
+		align-items: center;
+	}
+
 	.input-file {
 		$focus-box-shadow: 0 0 0 2px #fff, 0 0 0 4px #80acff !default;
 
