--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/com/liferay/fragment/collection/contributor/basic/component/dependencies/card/index.html
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/com/liferay/fragment/collection/contributor/basic/component/dependencies/card/index.html
@@ -28,7 +28,7 @@
 			</div>
 
 			<lfr-editable id="04-link" type="link">
-				<a href="" class="link">Go somewhere</a>
+				<a href="" class="link">Go somewhere.</a>
 			</lfr-editable>
 		</div>
 	</div>
