--- a/modules/apps/frontend-theme-fjord/frontend-theme-fjord-site-initializer/src/main/resources/com/liferay/frontend/theme/fjord/site/initializer/internal/dependencies/fragments/home/actions.html
+++ b/modules/apps/frontend-theme-fjord/frontend-theme-fjord-site-initializer/src/main/resources/com/liferay/frontend/theme/fjord/site/initializer/internal/dependencies/fragments/home/actions.html
@@ -7,7 +7,7 @@
 			<div class="row">
 				<div class="col-12 col-lg-8 col-md-10 col-xl-6">
 					<lfr-editable id="fjord-actions-title" type="rich-text">
-						<h2 class="display-4" role="heading" aria-level="1">
+						<h2 aria-level="1" class="display-4" role="heading">
 							Dynamic and Customizable for a Healthier You
 						</h2>
 					</lfr-editable>
