--- a/modules/apps/frontend-theme-porygon/frontend-theme-porygon-site-initializer/src/main/resources/com/liferay/frontend/theme/porygon/site/initializer/internal/dependencies/fragments/entry.html
+++ b/modules/apps/frontend-theme-porygon/frontend-theme-porygon-site-initializer/src/main/resources/com/liferay/frontend/theme/porygon/site/initializer/internal/dependencies/fragments/entry.html
@@ -10,13 +10,15 @@
 	<div class="row">
 		<div class="col-md-10 col-lg-8 mx-auto">
 			<h2 aria-level="1" class="text-center" role="heading">
-				<lfr-editable id="porygon_detail_content_title" type="text"
+				<lfr-editable
+					id="porygon_detail_content_title" type="text"
 					>Title</lfr-editable
 				>
 			</h2>
 
 			<h3 class="text-center">
-				<lfr-editable id="porygon_detail_content_subtitle" type="text"
+				<lfr-editable
+					id="porygon_detail_content_subtitle" type="text"
 					>Sub title</lfr-editable
 				>
 			</h3>
