--- a/modules/apps/frontend-theme-westeros-bank/frontend-theme-westeros-bank-site-initializer/src/main/resources/com/liferay/frontend/theme/westeros/bank/site/initializer/internal/dependencies/fragments/links.html
+++ b/modules/apps/frontend-theme-westeros-bank/frontend-theme-westeros-bank-site-initializer/src/main/resources/com/liferay/frontend/theme/westeros/bank/site/initializer/internal/dependencies/fragments/links.html
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-12">
 					<lfr-editable id="westeros-links-title" type="rich-text">
-						<h2 class="h6 mb-0" role="heading" aria-level="1">
+						<h2 aria-level="1" class="h6 mb-0" role="heading">
 							FIND US
 						</h2>
 					</lfr-editable>
