LPS-99057 Set background for the drop zone

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
@@ -73,6 +73,10 @@
 		align-items: center;
 	}
 
+	.drop-zone {
+		background-color: #f1f2f5;
+	}
+
 	.input-file {
 		$focus-box-shadow: 0 0 0 2px #fff, 0 0 0 4px #80acff !default;
 
