LPS-99057 Set top border for the management bar

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_item_selector.scss
@@ -66,6 +66,7 @@
 
 .portlet-item-selector .management-bar {
 	border-bottom-color: #e7e7ed;
+	border-top: 1px solid #e7e7ed;
 }
 
 .item-selector {
