--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/edit_template_form.jspf
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/edit_template_form.jspf
@@ -15,7 +15,7 @@
 --%>
 
 <%
-String namespace = renderResponse.getNamespace();
+String namespace = liferayPortletResponse.getNamespace();
 
 if (Validator.isNotNull(portletResourceNamespace)) {
 	namespace = portletResourceNamespace;
