--- a/modules/apps/staging/staging-configuration-web/src/main/resources/META-INF/resources/staging_configuration_exceptions.jspf
+++ b/modules/apps/staging/staging-configuration-web/src/main/resources/META-INF/resources/staging_configuration_exceptions.jspf
@@ -20,7 +20,7 @@
 		type="WARNING"
 	>
 		<liferay-ui:message key='<%= LanguageUtil.get(request, "live-group-remote-staging-alert") %>' />
-		<liferay-ui:message arguments='<%= "javascript:" + renderResponse.getNamespace() + "saveGroup(true);" %>' key="you-can-also-forcibly-disable-remote-staging" />
+		<liferay-ui:message arguments='<%= "javascript:" + liferayPortletResponse.getNamespace() + "saveGroup(true);" %>' key="you-can-also-forcibly-disable-remote-staging" />
 	</liferay-staging:alert>
 </c:if>
 
