--- a/modules/apps/portal-search/portal-search-web/src/main/resources/META-INF/resources/main_search.jspf
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/META-INF/resources/main_search.jspf
@@ -23,7 +23,7 @@ Hits hits = searchDisplayContext.getHits();
 >
 	<c:if test="<%= searchDisplayContext.isShowMenu() %>">
 		<clay:col
-			id='<%= renderResponse.getNamespace() + "facetNavigation" %>'
+			id='<%= liferayPortletResponse.getNamespace() + "facetNavigation" %>'
 			md="3"
 		>
 
