--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
@@ -86,6 +86,11 @@
 			.btn:hover {
 				background-color: #e7e7ed;
 			}
+
+			h3.category-text {
+				color: #6b6c7e;
+				font-weight: 600;
+			}
 		}
 
 		.sidebar {
