LPS-115627 Truncate long labels on dropdown button

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/main.scss
@@ -197,3 +197,9 @@ body.open .app-builder-upper-toolbar {
 		color: #6b6c7e;
 	}
 }
+
+.truncated-text {
+	display: flex;
+	overflow: hidden;
+	width: 180px;
+}
