LPS-115948 Put the icons in the correct place for collapsible panel

--- a/modules/apps/product-navigation/product-navigation-product-menu-theme-contributor/src/main/resources/META-INF/resources/product_navigation_product_menu.scss
+++ b/modules/apps/product-navigation/product-navigation-product-menu-theme-contributor/src/main/resources/META-INF/resources/product_navigation_product_menu.scss
@@ -401,12 +401,24 @@
 			color: $product-menu-panel-title-color;
 		}
 
+		&.collapsible-icon {
+			position: absolute;
+			right: 46px;
+			top: 9px;
+		}
+
 		z-index: 1;
 	}
 
 	.icon-pages-tree {
 		a {
 			color: $product-menu-panel-title-color;
+		}
+
+		&.collapsible-icon {
+			position: absolute;
+			right: 76px;
+			top: 9px;
 		}
 
 		z-index: 1;
