--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/META-INF/resources/sites/site_administration_header_icon_pages_tree.jspf
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/META-INF/resources/sites/site_administration_header_icon_pages_tree.jspf
@@ -14,7 +14,7 @@
  */
 --%>
 
-<div class="icon-pages-tree">
+<div class="icon-pages-tree <%= (childPanelCategoriesSize == 1) ? "" : "collapsible-icon" %>">
 	<liferay-ui:icon
 		icon="pages-tree"
 		id="pagesTreeSidenavToggleId"
