--- a/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/META-INF/resources/sites/site_administration_header_icon_sites.jspf
+++ b/modules/apps/product-navigation/product-navigation-site-administration/src/main/resources/META-INF/resources/sites/site_administration_header_icon_sites.jspf
@@ -14,7 +14,7 @@
  */
 --%>
 
-<div class="icon-sites">
+<div class="icon-sites <%= (childPanelCategoriesSize == 1) ? "" : "collapsible-icon" %>">
 	<liferay-ui:icon
 		icon="sites"
 		id="manageSitesLink"
