LPS-115821 - Add control menu toast icon color for the light version

--- a/modules/apps/product-navigation/product-navigation-control-menu-theme-contributor/src/main/resources/META-INF/resources/control_menu/_control_menu.scss
+++ b/modules/apps/product-navigation/product-navigation-control-menu-theme-contributor/src/main/resources/META-INF/resources/control_menu/_control_menu.scss
@@ -95,6 +95,21 @@ a.control-menu-icon,
 	.control-menu-level-1-heading {
 		color: $gray-900;
 	}
+
+	.toast-animation {
+		.cn,
+		.pm {
+			border-color: $control-menu-level-1-light-color;
+		}
+	}
+
+	.product-menu-toggle:focus,
+	.product-menu-toggle:hover {
+		.cn,
+		.pm {
+			border-color: $control-menu-level-1-light-link-hover-color;
+		}
+	}
 }
 
 .control-menu-level-1-nav {
