--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Topper.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Topper.scss
@@ -109,7 +109,9 @@
 		}
 	}
 
-	&.drag-over-middle .page-editor__container,
+	&.drag-over-middle
+		> .page-editor__topper__content
+		> .page-editor__container,
 	&.drag-over-middle.page-editor__col.empty:before,
 	&.drag-over-middle.page-editor__collection-item:before {
 		box-shadow: inset 0 0 0 4px $primary-l1;
@@ -139,9 +141,9 @@
 		border: 1px solid $danger;
 	}
 
-	&.not-droppable .page-editor__container:before,
-	&.not-droppable .page-editor__section > .container:before,
-	&.not-droppable .page-editor__section > .container-fluid:before,
+	&.not-droppable
+		> .page-editor__topper__content
+		> .page-editor__container:before,
 	&.not-droppable.page-editor__collection-item:before {
 		box-shadow: inset 0 0 0 1px $danger;
 		position: absolute;
