LPS-116084 Add margin between list and pagination

--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/META-INF/resources/css/main.scss
@@ -12,6 +12,12 @@
 	}
 }
 
+.lfr-search-container-wrapper {
+	.taglib-search-iterator-page-iterator-bottom {
+		margin-top: 24px;
+	}
+}
+
 .empty-state {
 	left: 50%;
 	max-width: 350px;
