LPS-116088 Add loading indicator and icon to the network status bar

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/App.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/App.scss
@@ -8,6 +8,7 @@
 @import './Frame';
 @import './Layout';
 @import './LayoutViewport';
+@import './NetworkstatusBar';
 @import './PreviewModal';
 @import './Sidebar';
 @import './Toolbar';
