LPS-116088 While performing the multiple undo, add a overlay over the editor to avoid any user done by the user that may corrupt the state of the application

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_variables.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_variables.scss
@@ -12,6 +12,9 @@ $toolbarBorderWidth: 1px;
 
 $floatingToolbarPanelMinWidth: 288px;
 
+$controlMenuHeight: 48px;
+$desktopControlMenuHeight: 56px;
+
 $dropTargetWidth: 5px;
 
 // z-indexes, ordered numerically.
@@ -24,4 +27,5 @@ $floatingToolbarPanelZIndex: 987;
 $floatingToolbarZIndex: 987;
 $sidebarZIndex: 988;
 $dragPreviewLayer: 991;
+$undoHistoryOverlayZIndex: 1001;
 $modalZIndex: 1050;
